Fix native titlebar offset and resizing upon unplugging dock widgets

When a dock widget received a native title bar upon unplugging, the
position of the newly unplugged dock widget was calculated without
taking the title bar's height into consideration.

Furthermore, dock widgets grew by the separator size upon undocking.
That is fixed by 10a143ccd762c810f4096a5b2e986d16ea0107ad by relying
on the assumption that passing a QRect() to the unplugging method
leads to un unchanged dock widget geometry.
However, when more than one dock widgets are docked in the same
main window dock on macOS or Windows, the size is stil increased.

This patch corrects the position offset for native title bars.
It also corrects an unplugged dock widget's geometry by the sparator's
size.

Fixes: QTBUG-106530
Fixes: QTBUG-106531
Change-Id: Ia4bcb556841e14146f19c1377f4010d5ae009bcf
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit d46f317c8e69376b5f124fba3c42fff5e394699f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>